<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/guide0"
      android:title="@string/guide0"
      android:checked="true"/>
    <item
      android:id="@+id/guide1"
      android:title="@string/guide1"/>
    <item
      android:id="@+id/guide2"
      android:title="@string/guide2"/>
    <item
      android:id="@+id/guide3"
      android:title="@string/guide3"/>
    <item
      android:id="@+id/guide4"
      android:title="@string/guide4"/>
    <item
      android:id="@+id/guide5"
      android:title="@string/guide5"/>
    <item
      android:id="@+id/guide6"
      android:title="@string/guide6"/>
    <item
      android:id="@+id/guide7"
      android:title="@string/guide7"/>
    <item
      android:id="@+id/guide8"
      android:title="@string/guide8"/>
    <item
      android:id="@+id/guide9"
      android:title="@string/guide9"/>
    <item
      android:id="@+id/guide10"
      android:title="@string/guide10"/>
    <item
      android:id="@+id/guide11"
      android:title="@string/guide11"/>
    <item
      android:id="@+id/guide12"
      android:title="@string/guide12"/>
    <item
      android:id="@+id/guide13"
      android:title="@string/guide13"/>
    <item
      android:id="@+id/guide14"
      android:title="@string/guide14"/>
    <item
      android:id="@+id/guide15"
      android:title="@string/guide15"/>
    <item
      android:id="@+id/guide16"
      android:title="@string/guide16"/>
    <item
      android:id="@+id/guide17"
      android:title="@string/guide17"/>
    <item
      android:id="@+id/guide18"
      android:title="@string/guide18"/>
    <item
      android:id="@+id/guide19"
      android:title="@string/guide19"/>
    <item
      android:id="@+id/guide20"
      android:title="@string/guide20"/>
    <item
      android:id="@+id/guide21"
      android:title="@string/guide21"/>
    <item
      android:id="@+id/guide22"
      android:title="@string/guide22"/>
    <item
      android:id="@+id/guide23"
      android:title="@string/guide23"/>
    <item
      android:id="@+id/guide24"
      android:title="@string/guide24"/>
  </group><!--
  <item android:title="Database">
    <menu>
      <item
        android:id="@+id/korokMenu"
        android:title="@string/korokProg"/>
      <item
        android:id="@+id/shrines"
        android:title="@string/shrineProg"/>
      <item
        android:id="@+id/towers"
        android:title="@string/towers"/>
      <item
        android:id="@+id/monsters"
        android:title="Monsters"/>
      <item
        android:id="@+id/mainQuests"
        android:title="Main Quests"/>
      <item
        android:id="@+id/sideQuests"
        android:title="Side Quest"/>
      <item
        android:id="@+id/shrineQuest"
        android:title="Shrine Quests"/>
    </menu>
  </item>-->
</menu>
